<resources>
    <string name="app_name">Corabelca Sensor</string>
    <string name="sensors_title">Датчики</string>
    <string name="all_delete">Удалить</string>
    <string name="all_export">Экспорт</string>
    <string name="all_notification">Уведомление</string>
    <string name="all_open">открыть</string>
    <string name="all_warning">Предупреждение</string>
    <string name="export_item_detail">Записано %s с %d событиями</string>
    <string name="export_item_delete_warning">Вы уверены, что хотите удалить эту запись?</string>
    <string name="export_write_complete">Запись была сохранена в папке загрузок</string>
    <string name="sensorAccelerometer">Акселерометр</string>
    <string name="sensorMagneticField">Магнитометр</string>
    <string name="sensorGravity">Гравитометр</string>
    <string name="sensorGyroscope">Гироскоп</string>
    <string name="sensorLinearAcceleration">Линейный акселерометр</string>
    <string name="sensorAmbientTemperature">Датчик температуры</string>
    <string name="sensorLight">Фоторезистор</string>
    <string name="sensorPressure">Датчик давления</string>
    <string name="sensorRelativeHumidity">Гигрометр</string>
    <string name="sensorGeomagneticRotationVector">Датчик ориентации</string>
    <string name="sensorProximity">Датчик приближения</string>
    <string name="sensorStepCounter">Шагомер</string>
    <string name="labelName">имя: %s</string>
    <string name="labelVendor">изготовитель: %s</string>
    <string name="labelVersion">версия: %s</string>
    <string name="labelPower">электричество: %s mA</string>
    <string name="labelMaxDelay">Макс. задержка: %s</string>
    <string name="labelMinDelay">мин. задержка: %s</string>
    <string name="labelMaxRange">Макс. диапазон: %s</string>
    <string name="notification_permission_rationale">Сенсор использует уведомление для записи данных при выключенном экране.</string>
    <string name="unitAcceleration">%.4f m/s²</string>
    <string name="unitMagneticField">%.4f µT</string>
    <string name="unitAngularVelocity">%.6f rad/s</string>
    <string name="unitMicroseconds">%.4f µs</string>
    <string name="unitTemperature">%.1f °C</string>
    <string name="unitIlluminance">%.4f lux</string>
    <string name="unitPressure">%.4f hPa</string>
    <string name="unitPercent">%.2f %%</string>
    <string name="unitProximity">%.1f cm</string>
    <string name="unitStep">%.4f Шаги</string>
    <string name="unitAmpere">%.2f mA</string>
    <string name="unitNone">%.1f</string>
    <string name="sensor_not_available">%s недоступен</string>
    <string name="startRecording">Запись началась</string>
    <string name="menuSensorText">сенсор</string>
    <string name="logging">Запись</string>
    <string name="maxFileSize">4GB Размер файла</string>
    <string name="app_icon">app icon</string>
    <string name="icon">icon</string>
    <string name="information">информация</string>
    <string name="details">детали</string>
    <string name="darkTheme">темная тема</string>
    <string name="record_channel_name">Запись</string>
    <string name="record_channel_description">Запись данных датчика</string>
    <string name="infoAccelerometer">Акселерометр - это устройство, которое измеряет ускорение. Ускорение относится к скорости изменения скорости, которое может происходить в различных направлениях.
        \n\nАкселерометры широко используются во многих областях, включая инженерное дело, физику и бытовую электронику. Их можно найти в смартфонах, фитнес-трекерах, игровых контроллерах, беспилотниках и транспортных средствах, среди прочих устройств.
        \n\nОсновная функция датчика ускорения заключается в обнаружении и измерении силы ускорения, действующей на объект или устройство. Он может воспринимать как статическое ускорение (например, силу тяжести), так и динамическое ускорение (например, движение или вибрацию).
        \n\nОсновной принцип работы акселерометра заключается в использовании системы масса-пружина или микроэлектромеханической системы (MEMS). При приложении ускорения масса внутри акселерометра испытывает силу, пропорциональную ускорению. Эта сила вызывает смещение, которое измеряется датчиком. Измерение затем преобразуется в электрический сигнал, который может быть обработан и интерпретирован электронными схемами или программным обеспечением.
        \n\nВ бытовой электронике они используются для поворота экрана, распознавания жестов, подсчета шагов и обнаружения тряски. В автомобильной промышленности они обеспечивают срабатывание подушек безопасности, контроль устойчивости и обнаружение опрокидывания. Они также используются в мониторинге промышленного оборудования, измерении сейсмической активности, робототехнике и системах виртуальной реальности.
    </string>
    <string name="infoMagneticField">Магнитометрический датчик, также известный как магнитный датчик, - это особый тип датчика, который измеряет силу и направление магнитного поля. Это компонент, включающий магнитометр в более крупную систему или устройство.
        \n\nМагнитометрические датчики широко используются в самых разных областях, включая бытовую электронику, навигационные системы, робототехнику и научные исследования. Они обеспечивают возможность обнаружения и мониторинга магнитных полей в режиме реального времени.
        \n\nСам датчик обычно представляет собой небольшое электронное устройство, содержащее один или несколько магнитометров. Эти магнитометры могут быть основаны на различных технологиях, таких как флюксгейт, эффект Холла или магниторезистивный принцип, для измерения напряженности магнитного поля.
        \n\nМагнитометрический датчик может быть интегрирован в различные устройства, включая смартфоны, планшеты, носимые устройства, беспилотники и транспортные средства. В бытовой электронике магнитометрические датчики часто используются для обеспечения функциональности компаса, позволяя устройствам определять свою ориентацию относительно магнитного поля Земли. Это позволяет использовать такие функции, как автоматический поворот экрана, приложения дополненной реальности и помощь в навигации.
    </string>
    <string name="infoGravity">Гравитационный датчик, также известный как гравитометр или гравитационный акселерометр, - это тип датчика, который измеряет ускорение, вызванное гравитацией. Он определяет силу гравитации, действующую на объект или устройство, и предоставляет информацию об ориентации и наклоне относительно гравитационного поля Земли.
        \n\nОсновная функция гравитационного датчика - измерение ускорения, вызванного гравитацией, которое вблизи поверхности Земли составляет приблизительно 9,8 метра в секунду в квадрате (м/с²). Он может определять статическую составляющую гравитационного поля и обычно используется для определения наклона, наклона или ориентации устройства.
        \n\nГравитационные датчики часто встречаются в потребительских электронных устройствах, таких как смартфоны, планшеты и игровые контроллеры. Они используются для различных целей, включая поворот экрана, автоматическое выравнивание изображений и игры, основанные на движении.
        \n\nТехнология, лежащая в основе датчиков гравитации, может быть различной. Во многих устройствах датчики гравитации часто интегрированы с другими датчиками, такими как акселерометры или гироскопы. Комбинируя данные от этих датчиков, устройство может оценить наклон или угол наклона устройства в трехмерном пространстве.
    </string>
    <string name="infoGyroscope">Датчик гироскопа - это устройство, которое измеряет и обнаруживает угловое или вращательное движение. Он используется для определения изменений ориентации и поддержания стабильности в различных электронных устройствах и системах.
        \n\nОсновная функция гироскопического датчика - предоставление информации о вращательном движении устройства вокруг различных осей. Он измеряет скорость углового вращения и предоставляет данные об изменении ориентации, угловой скорости и угловом смещении.
        \n\nГироскопические датчики широко используются в потребительской электронике, такой как смартфоны, планшеты, игровые контроллеры и устройства виртуальной реальности. Они играют важную роль в обеспечении таких функций, как управление движением в играх, стабилизация изображения и поворот экрана.
        \n\nСуществуют различные типы гироскопических датчиков, включая механические гироскопы и твердотельные гироскопы. Механические гироскопы, которые сегодня встречаются реже, состоят из вращающегося колеса или диска, который сопротивляется изменению своей ориентации. При вращении устройства гироскоп испытывает силу, которая может быть измерена для определения углового перемещения.
    </string>
    <string name="infoLinearAcceleration">Датчик линейного ускорения, также известный как линейный акселерометр, - это устройство, которое измеряет ускорение вдоль прямой линии или в определенном направлении. В отличие от обычного акселерометра, который измеряет ускорение по всем трем осям (x, y и z), датчик линейного ускорения фокусируется на измерении ускорения в одном направлении.
        \n\nОсновная функция датчика линейного ускорения заключается в обнаружении и количественной оценке линейного или прямолинейного ускорения. Он может измерять изменения скорости или ускорения в определенном направлении без влияния силы тяжести или других факторов вдоль ортогональных осей.
        \n\nДатчики линейного ускорения широко используются в различных приложениях, где требуется точное измерение линейного движения. Их можно найти в таких устройствах, как смартфоны, планшеты, носимые устройства и игровые контроллеры.
    </string>
    <string name="infoAmbientTemperature">Датчик температуры окружающей среды, также известный как датчик температуры или датчик температуры окружающей среды, - это устройство, используемое для измерения и мониторинга температуры окружающей среды или окружающей среды. Он определяет температуру воздуха или ближайшего окружения без непосредственного контакта с измеряемыми объектами или поверхностями.
        \n\nОсновная функция датчика температуры окружающей среды заключается в предоставлении точной информации о температуре окружающей среды в режиме реального времени. Они обычно используются для мониторинга и контроля температуры в различных приложениях, включая системы HVAC (отопление, вентиляция и кондиционирование воздуха), метеостанции, промышленные процессы, электронные устройства и автомобильные системы.
        \n\nДатчики температуры окружающей среды используют различные технологии для измерения температуры. Одним из распространенных типов датчиков является термистор - резистор, который изменяет свое электрическое сопротивление при изменении температуры. Другой тип - твердотельный датчик, например, датчик на основе полупроводников, который использует характеристики полупроводниковых материалов, зависящие от температуры.
        \n\nДатчик температуры окружающей среды разработан таким образом, чтобы быть чувствительным к изменениям температуры, и обычно калибруется для обеспечения точных показаний температуры. Он может измерять температуру в определенном диапазоне и обеспечивает электрический выходной сигнал, который может быть аналоговым или цифровым, соответствующим обнаруженной температуре.
    </string>
    <string name="infoLight">Датчик света, также известный как фоторезистор или фотодетектор, - это устройство, которое обнаруживает и измеряет интенсивность света в окружающей среде. Он предназначен для реагирования на изменения освещенности и преобразования обнаруженного света в электрический сигнал.
        \n\nОсновная функция датчика света заключается в определении и контроле уровня освещенности. Он используется в различных приложениях для управления системами освещения, регулировки яркости экрана, включения автоматических выключателей и обеспечения обратной связи для контроля экспозиции в камерах.
    </string>
</resources>